fix:fixed style issue in dark mode on profile page

--- a/css/style.css
+++ b/css/style.css
@@ -1489,6 +1489,19 @@ body.dark-theme .client-reminder-btn:focus-visible {
   background-color: rgb(150.3319148936, 44.629787234, 33.6680851064);
 }
 
+body.dark-theme .profile-summary {
+  background-color: #1f2937;
+  color: #ffffff;
+}
+body.dark-theme .profile-summary .profile-summary-details p {
+  color: #f4f4f4;
+}
+body.dark-theme .profile-summary .profile-summary-details strong {
+  color: #f4f4f4;
+}
+body.dark-theme #profile-summary-name {
+  color: #f4f4f4;
+}
 body.dark-theme .profile-card {
   background-color: #1f2937;
   border-color: #374151;
